Fixed the spacing between replies

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+/* Import Montserrat */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   body {
-    @apply font-sans flex items-center justify-center bg-gray-50 text-gray-900;
+    @apply font-sans flex items-center justify-center bg-[#111110] text-white;
   }
 }
